--- a/report/references.bib
+++ b/report/references.bib
@@ -18,6 +18,56 @@ Title = {Sphere Point Picking -- from Wolfram MathWorld},
 Url = {http://mathworld.wolfram.com/},
 Bdsk-Url-1 = {http://mathworld.wolfram.com/}}
 
+@misc{skeinforge,
+Date-Added = {2013-12-02},
+Date-Modified = {2013-12-02},
+Howpublished = {http://fabmetheus.crsndoo.com/},
+Key = {skein forge},
+Note = {Accessed: November 2013},
+Title = {Skeinforge - Fabmetheus},
+Url = {http://fabmetheus.crsndoo.com/},
+Bdsk-Url-1 = {http://fabmetheus.crsndoo.com/}}
+
+@misc{willit,
+Date-Added = {2013-12-02},
+Date-Modified = {2013-12-02},
+Howpublished = {http://willit3dprint.com/},
+Key = {will it},
+Note = {Accessed: November 2013},
+Title = {Willit 3D Print},
+Url = {http://willit3dprint.com/},
+Bdsk-Url-1 = {http://willit3dprint.com/}}
+
+@misc{cura-engine,
+Date-Added = {2013-12-02},
+Date-Modified = {2013-12-02},
+Howpublished = {https://github.com/Ultimaker/CuraEngine},
+Key = {cura engine},
+Note = {Accessed: November 2013},
+Title = {CuraEngine on Github},
+Url = {https://github.com/Ultimaker/CuraEngine},
+Bdsk-Url-1 = {https://github.com/Ultimaker/CuraEngine}}
+
+@misc{cura,
+Date-Added = {2013-12-02},
+Date-Modified = {2013-12-02},
+Howpublished = {http://wiki.ultimaker.com/Cura},
+Key = {cura},
+Note = {Accessed: November 2013},
+Title = {Cura - Ultimaker Wiki},
+Url = {http://wiki.ultimaker.com/Cura},
+Bdsk-Url-1 = {http://wiki.ultimaker.com/Cura}}
+
+@misc{shapeways,
+Date-Added = {2013-12-02},
+Date-Modified = {2013-12-02},
+Howpublished = {https://www.shapeways.com/},
+Key = {shapeways},
+Note = {Accessed: November 2013},
+Title = {Shapeways},
+Url = {https://www.shapeways.com/},
+Bdsk-Url-1 = {https://www.shapeways.com/}}
+
 @inproceedings{design-galleries,
  author = {Marks, J. and Andalman, B. and Beardsley, P. A. and Freeman, W. and Gibson, S. and Hodgins, J. and Kang, T. and Mirtich, B. and Pfister, H. and Ruml, W. and Ryall, K. and Seims, J. and Shieber, S.},
  title = {Design Galleries: A General Approach to Setting Parameters for Computer Graphics and Animation},
@@ -34,3 +84,22 @@ Bdsk-Url-1 = {http://mathworld.wolfram.com/}}
  address = {New York, NY, USA},
  keywords = {animation, computer-aided design, image rendering, lighting, motion synthesis, particle systems, physical modeling, visualization, volume rendering},
 } 
+
+@inproceedings{jansen-physvis,
+ author = {Jansen, Yvonne and Dragicevic, Pierre and Fekete, Jean-Daniel},
+ title = {Evaluating the Efficiency of Physical Visualizations},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '13},
+ year = {2013},
+ isbn = {978-1-4503-1899-0},
+ location = {Paris, France},
+ pages = {2593--2602},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2470654.2481359},
+ doi = {10.1145/2470654.2481359},
+ acmid = {2481359},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {3d visualization, evaluation, physical visualization},
+} 
+[download]
