better highlight colors and updates to report

--- a/report/report.tex
+++ b/report/report.tex
@@ -163,13 +163,7 @@ Being a novice printer user, she decides to fire up Support Support to help her 
 \valkyrie{Derrick, please put some story about how this user goes through the process of choosing things in our interface}
 Through looking at the this visualization she can easily view three main aspects of fabrication: support material volume, print time, and surface area of support material contact. For each facet there is a heatmap and a histogram associated, where the x and y axis of the heatmap represent the angle rotation along the x and y axises respectively.
 
-She can click on different portions of one of the heatmaps (for example, on the lightest portion the material use heatmap), and doing so will highlight the bar in the histogram which corresponds to that material use value. For this example, the bar would be farthest to the left, since it would correspond to the least material use. Clicking the heatmap also reorients the wizzard icon (to the referenced new orientation. 
-
-For that,  
-
-support material volume, print time, and surface area of support material contact. angle of indicies, and affect faces.
-
-Support Support allows her to examine 3 important facets of abricating her 3D printing model: 
+She can click on different portions of one of the heatmaps. For her in particular she is really into being green. Thus, she clicks on the lightest portion the material use heatmap. By doing so she highlights the bar in the histogram which corresponds to that material use value. For this example, the bar would be farthest to the left, since it would correspond to the least material use. Clicking the heatmap also reorients the wizzard icon (to the referenced new orientation). For the specific orientation, she additionally, can look at the angles histogram which maps out the different angles that the support material is at. She notices that this position corresponds to a lot of material with overall higher angles and thus more difficult support material. Despite her desire to green, she is not feeling particulary gung-ho about having to remove inconvenient support material today. Thus she selects on other light portions on the material use heatmap, and continues to further explore universe of 3D fabrication orientations.
 
 \begin{figure}
         \centering
